lab3/gen/antlr/PrefixExpressionParser.java
// Generated from /home/friendlyevil/IdeaProjects/MT_3Lab/src/main/java/antlr/PrefixExpression.g4 by ANTLR 4.7.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrefixExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, NUMER=2, PLUS=3, MINUS=4, MUL=5, DIV=6, DEF=7, EQUALS=8, 
		NOT_EQUAL=9, LOWER=10, LOWER_EQUAL=11, HIGHER=12, HIGHER_EQUAL=13, LEFT=14, 
		RIGHT=15, AND=16, OR=17, NOT=18, TRUE=19, FALSE=20, IF=21, PRINT=22, VARIABLE=23;
	public static final int
		RULE_expr = 0, RULE_s_expression = 1, RULE_big_expression = 2, RULE_expression = 3, 
		RULE_if_rule = 4, RULE_else_rule = 5, RULE_print = 6, RULE_define = 7, 
		RULE_right_variable = 8, RULE_arithmetic = 9, RULE_arithmetic_operation = 10, 
		RULE_logic_operation = 11, RULE_logic = 12, RULE_compare_operation = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"expr", "s_expression", "big_expression", "expression", "if_rule", "else_rule", 
			"print", "define", "right_variable", "arithmetic", "arithmetic_operation", 
			"logic_operation", "logic", "compare_operation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'+'", "'-'", "'*'", "'/'", "'='", "'=='", "'!='", 
			"'<'", "'<='", "'>'", "'>='", "'{'", "'}'", "'&&'", "'||'", "'!'", "'true'", 
			"'false'", "'if'", "'print'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "NUMER", "PLUS", "MINUS", "MUL", "DIV", "DEF", "EQUALS", 
			"NOT_EQUAL", "LOWER", "LOWER_EQUAL", "HIGHER", "HIGHER_EQUAL", "LEFT", 
			"RIGHT", "AND", "OR", "NOT", "TRUE", "FALSE", "IF", "PRINT", "VARIABLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrefixExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrefixExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExprContext extends ParserRuleContext {
		public String val;
		public S_expressionContext ex;
		public S_expressionContext s_expression() {
			return getRuleContext(S_expressionContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((ExprContext)_localctx).ex = s_expression(0);
			((ExprContext)_localctx).val =  ((ExprContext)_localctx).ex.val;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class S_expressionContext extends ParserRuleContext {
		public int tab;
		public String val;
		public ExpressionContext expression;
		public Big_expressionContext f;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode LEFT() { return getToken(PrefixExpressionParser.LEFT, 0); }
		public TerminalNode RIGHT() { return getToken(PrefixExpressionParser.RIGHT, 0); }
		public Big_expressionContext big_expression() {
			return getRuleContext(Big_expressionContext.class,0);
		}
		public S_expressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public S_expressionContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_s_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterS_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitS_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitS_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final S_expressionContext s_expression(int tab) throws RecognitionException {
		S_expressionContext _localctx = new S_expressionContext(_ctx, getState(), tab);
		enterRule(_localctx, 2, RULE_s_expression);
		try {
			setState(39);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
			case IF:
			case PRINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				((S_expressionContext)_localctx).expression = expression(tab);
				((S_expressionContext)_localctx).val =  ((S_expressionContext)_localctx).expression.val;
				}
				break;
			case LEFT:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				match(LEFT);
				setState(35);
				((S_expressionContext)_localctx).f = big_expression(tab);
				setState(36);
				match(RIGHT);
				((S_expressionContext)_localctx).val =  ((S_expressionContext)_localctx).f.val;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Big_expressionContext extends ParserRuleContext {
		public int tab;
		public String val;
		public ExpressionContext expression;
		public ExpressionContext f;
		public Big_expressionContext s;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Big_expressionContext big_expression() {
			return getRuleContext(Big_expressionContext.class,0);
		}
		public Big_expressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Big_expressionContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_big_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterBig_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitBig_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitBig_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Big_expressionContext big_expression(int tab) throws RecognitionException {
		Big_expressionContext _localctx = new Big_expressionContext(_ctx, getState(), tab);
		enterRule(_localctx, 4, RULE_big_expression);
		try {
			setState(48);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				((Big_expressionContext)_localctx).expression = expression(tab);
				((Big_expressionContext)_localctx).val =  ((Big_expressionContext)_localctx).expression.val;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((Big_expressionContext)_localctx).f = expression(tab);
				setState(45);
				((Big_expressionContext)_localctx).s = big_expression(tab);
				((Big_expressionContext)_localctx).val =  ((Big_expressionContext)_localctx).f.val + ((Big_expressionContext)_localctx).s.val;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public int tab;
		public String val;
		public If_ruleContext ex;
		public PrintContext e;
		public DefineContext exx;
		public If_ruleContext if_rule() {
			return getRuleContext(If_ruleContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExpressionContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression(int tab) throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState(), tab);
		enterRule(_localctx, 6, RULE_expression);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				((ExpressionContext)_localctx).ex = if_rule(tab);
				((ExpressionContext)_localctx).val =  ((ExpressionContext)_localctx).ex.val + "\n";
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				((ExpressionContext)_localctx).e = print(tab);
				((ExpressionContext)_localctx).val =  ((ExpressionContext)_localctx).e.val + "\n";
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				((ExpressionContext)_localctx).exx = define(tab);
				((ExpressionContext)_localctx).val =  ((ExpressionContext)_localctx).exx.val + "\n";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_ruleContext extends ParserRuleContext {
		public int tab;
		public String val;
		public LogicContext c;
		public S_expressionContext ex;
		public Else_ruleContext el;
		public TerminalNode IF() { return getToken(PrefixExpressionParser.IF, 0); }
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public S_expressionContext s_expression() {
			return getRuleContext(S_expressionContext.class,0);
		}
		public Else_ruleContext else_rule() {
			return getRuleContext(Else_ruleContext.class,0);
		}
		public If_ruleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public If_ruleContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_if_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterIf_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitIf_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitIf_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_ruleContext if_rule(int tab) throws RecognitionException {
		If_ruleContext _localctx = new If_ruleContext(_ctx, getState(), tab);
		enterRule(_localctx, 8, RULE_if_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(IF);
			setState(62);
			((If_ruleContext)_localctx).c = logic();
			setState(63);
			((If_ruleContext)_localctx).ex = s_expression(tab+1);
			setState(64);
			((If_ruleContext)_localctx).el = else_rule(tab);
			((If_ruleContext)_localctx).val =  String.format("%sif %s:\n%s%s", "    ".repeat(_localctx.tab), ((If_ruleContext)_localctx).c.val, ((If_ruleContext)_localctx).ex.val, ((If_ruleContext)_localctx).el.val);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_ruleContext extends ParserRuleContext {
		public int tab;
		public String val;
		public S_expressionContext ex;
		public S_expressionContext s_expression() {
			return getRuleContext(S_expressionContext.class,0);
		}
		public Else_ruleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Else_ruleContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_else_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterElse_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitElse_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitElse_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_ruleContext else_rule(int tab) throws RecognitionException {
		Else_ruleContext _localctx = new Else_ruleContext(_ctx, getState(), tab);
		enterRule(_localctx, 10, RULE_else_rule);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				((Else_ruleContext)_localctx).ex = s_expression(tab+1);
				((Else_ruleContext)_localctx).val =  String.format("%selse:\n%s", "    ".repeat(_localctx.tab), ((Else_ruleContext)_localctx).ex.val);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((Else_ruleContext)_localctx).val =  "";
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public int tab;
		public String val;
		public Right_variableContext v;
		public TerminalNode PRINT() { return getToken(PrefixExpressionParser.PRINT, 0); }
		public Right_variableContext right_variable() {
			return getRuleContext(Right_variableContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PrintContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print(int tab) throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState(), tab);
		enterRule(_localctx, 12, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(PRINT);
			setState(74);
			((PrintContext)_localctx).v = right_variable();
			((PrintContext)_localctx).val =  String.format("%sprint(%s)", "    ".repeat(_localctx.tab), ((PrintContext)_localctx).v.val);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineContext extends ParserRuleContext {
		public int tab;
		public String val;
		public Token var;
		public Right_variableContext v;
		public TerminalNode DEF() { return getToken(PrefixExpressionParser.DEF, 0); }
		public TerminalNode VARIABLE() { return getToken(PrefixExpressionParser.VARIABLE, 0); }
		public Right_variableContext right_variable() {
			return getRuleContext(Right_variableContext.class,0);
		}
		public DefineContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DefineContext(ParserRuleContext parent, int invokingState, int tab) {
			super(parent, invokingState);
			this.tab = tab;
		}
		@Override public int getRuleIndex() { return RULE_define; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineContext define(int tab) throws RecognitionException {
		DefineContext _localctx = new DefineContext(_ctx, getState(), tab);
		enterRule(_localctx, 14, RULE_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(DEF);
			setState(78);
			((DefineContext)_localctx).var = match(VARIABLE);
			setState(79);
			((DefineContext)_localctx).v = right_variable();
			((DefineContext)_localctx).val =  String.format("%s%s = %s", "    ".repeat(_localctx.tab), (((DefineContext)_localctx).var!=null?((DefineContext)_localctx).var.getText():null), ((DefineContext)_localctx).v.val);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Right_variableContext extends ParserRuleContext {
		public String val;
		public ArithmeticContext v;
		public LogicContext v1;
		public Token var;
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(PrefixExpressionParser.VARIABLE, 0); }
		public Right_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_right_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterRight_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitRight_variable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitRight_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Right_variableContext right_variable() throws RecognitionException {
		Right_variableContext _localctx = new Right_variableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_right_variable);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				((Right_variableContext)_localctx).v = arithmetic();
				((Right_variableContext)_localctx).val =  ((Right_variableContext)_localctx).v.val;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				((Right_variableContext)_localctx).v1 = logic();
				((Right_variableContext)_localctx).val =  ((Right_variableContext)_localctx).v1.val;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				((Right_variableContext)_localctx).var = match(VARIABLE);
				((Right_variableContext)_localctx).val =  (((Right_variableContext)_localctx).var!=null?((Right_variableContext)_localctx).var.getText():null);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmeticContext extends ParserRuleContext {
		public String val;
		public Arithmetic_operationContext op;
		public ArithmeticContext left;
		public ArithmeticContext right;
		public Token num;
		public Token var;
		public Arithmetic_operationContext arithmetic_operation() {
			return getRuleContext(Arithmetic_operationContext.class,0);
		}
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public TerminalNode NUMER() { return getToken(PrefixExpressionParser.NUMER, 0); }
		public TerminalNode VARIABLE() { return getToken(PrefixExpressionParser.VARIABLE, 0); }
		public ArithmeticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterArithmetic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitArithmetic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArithmeticContext arithmetic() throws RecognitionException {
		ArithmeticContext _localctx = new ArithmeticContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_arithmetic);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
			case MINUS:
			case MUL:
			case DIV:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				((ArithmeticContext)_localctx).op = arithmetic_operation();
				setState(93);
				((ArithmeticContext)_localctx).left = arithmetic();
				setState(94);
				((ArithmeticContext)_localctx).right = arithmetic();
				((ArithmeticContext)_localctx).val =  String.format("(%s %s %s)", ((ArithmeticContext)_localctx).left.val, ((ArithmeticContext)_localctx).op.op, ((ArithmeticContext)_localctx).right.val);
				}
				break;
			case NUMER:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				((ArithmeticContext)_localctx).num = match(NUMER);
				((ArithmeticContext)_localctx).val =  (((ArithmeticContext)_localctx).num!=null?((ArithmeticContext)_localctx).num.getText():null);
				}
				break;
			case VARIABLE:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				((ArithmeticContext)_localctx).var = match(VARIABLE);
				((ArithmeticContext)_localctx).val =  (((ArithmeticContext)_localctx).var!=null?((ArithmeticContext)_localctx).var.getText():null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetic_operationContext extends ParserRuleContext {
		public String op;
		public TerminalNode PLUS() { return getToken(PrefixExpressionParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(PrefixExpressionParser.MINUS, 0); }
		public TerminalNode MUL() { return getToken(PrefixExpressionParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(PrefixExpressionParser.DIV, 0); }
		public Arithmetic_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).enterArithmetic_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExpressionListener ) ((PrefixExpressionListener)listener).exitArithmetic_operation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrefixExpressionVisitor ) return ((PrefixExpressionVisitor<? extends T>)visitor).visitArithmetic_operation(this);
			else return visitor.visitChildren(this);
		}
	}
